artifacts/perf/frankentorch-c31ar/cargo_check_ft_kernel_cpu_release_after_replay.log
[RCH] local (no admissible workers: critical_pressure=1,insufficient_slots=2)
    Checking cfg-if v1.0.4
    Checking once_cell v1.21.4
    Checking either v1.15.0
    Checking bitflags v2.11.1
    Checking linux-raw-sys v0.12.1
    Checking regex-syntax v0.8.10
    Checking fastrand v2.4.1
    Checking anstyle v1.0.14
    Checking plotters-backend v0.3.7
    Checking memchr v2.8.0
    Checking clap_lex v1.1.0
   Compiling libm v0.2.16
    Checking ciborium-io v0.2.2
    Checking itoa v1.0.18
    Checking cast v0.3.0
    Checking bit-vec v0.8.0
    Checking rawpointer v0.2.1
    Checking same-file v1.0.6
    Checking fnv v1.0.7
    Checking quick-error v1.2.3
    Checking anes v0.1.6
    Checking unarray v0.1.4
    Checking similar v2.7.0
    Checking oorandom v11.1.5
    Checking libc v0.2.185
    Checking crossbeam-utils v0.8.21
    Checking serde_core v1.0.228
    Checking zmij v1.0.21
   Compiling bytemuck_derive v1.10.2
    Checking num-traits v0.2.19
    Checking zerocopy v0.8.48
    Checking matrixmultiply v0.3.10
    Checking itertools v0.10.5
    Checking clap_builder v4.6.0
    Checking walkdir v2.5.0
    Checking plotters-svg v0.3.7
    Checking bit-set v0.8.0
    Checking rustix v1.1.4
    Checking crossbeam-epoch v0.9.18
    Checking crossbeam-deque v0.8.6
    Checking num-complex v0.4.6
    Checking plotters v0.3.7
    Checking rayon-core v1.13.0
    Checking bytemuck v1.25.0
    Checking getrandom v0.3.4
    Checking wait-timeout v0.2.1
    Checking is-terminal v0.4.17
    Checking console v0.16.3
    Checking safe_arch v0.7.4
    Checking rand_core v0.9.5
    Checking criterion-plot v0.5.0
    Checking rayon v1.12.0
    Checking rand v0.9.4
    Checking rand_xorshift v0.4.0
    Checking wide v0.7.33
    Checking clap v4.6.1
    Checking regex-automata v0.4.14
    Checking tempfile v3.27.0
    Checking rusty-fork v0.3.1
    Checking insta v1.47.2
    Checking serde v1.0.228
    Checking serde_json v1.0.149
    Checking tinytemplate v1.2.1
    Checking regex v1.12.3
    Checking half v2.7.1
    Checking ppv-lite86 v0.2.21
    Checking rand_chacha v0.9.0
    Checking ciborium-ll v0.2.2
    Checking ft-core v0.1.0 (/data/projects/frankentorch/crates/ft-core)
    Checking proptest v1.11.0
    Checking ciborium v0.2.2
    Checking ft-kernel-cpu v0.1.0 (/data/projects/frankentorch/crates/ft-kernel-cpu)
    Checking criterion v0.5.1
error[E0425]: cannot find function `svd_gemm_left_reconstruction_fast_path` in module `super`
     --> crates/ft-kernel-cpu/src/lib.rs:22135:27
      |
22135 |         let fast = super::svd_gemm_left_reconstruction_fast_path(&a, n, n, false)
      |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `super`

error[E0425]: cannot find function `svd_gemm_left_reconstruction_fast_path` in module `super`
     --> crates/ft-kernel-cpu/src/lib.rs:22152:20
      |
22152 |             super::svd_gemm_left_reconstruction_fast_path(&a, n, n, false)
      |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in `super`

For more information about this error, try `rustc --explain E0425`.
error: could not compile `ft-kernel-cpu` (lib test) due to 2 previous errors
